Fix title getting cut off in hero on mobile

--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -92,7 +92,7 @@
 
   @at-root .product-pages &.x-small-hero,
   .product-category-pages &.x-small-hero {
-    min-height: 260px;
+    min-height: 310px;
     text-align: center;
 
     h4 {
